# verse-semantics

./: .gitignore  ACM-Reference-Format.bst  Makefile  README.md  Tim-Spec.txt  VerseSemantics.cabal  about.verse  calculus.fmt  calculus.ltx  calculus.txt  flake.nix  hie.yaml  shell.nix  verse.bib  verse.cabal  verse.tex
Grammar/ebnf/: Makefile  all.verse  ebnf.cabal
HaskellRules/: .ghci  .gitignore  A  A.hs  CHANGELOG.md  HaskellRules.cabal  Makefile  README.md  aap  apa  cabal.project  p.p  testing
HaskellRules/Epic/: Applicative.hs  List.hs  Print.hs  QuickCheck.hs  SIntMap.hs  Trace.hs  UnionFind.hs
HaskellRules/FrontEnd/: .ghci  Core.hs  CoreSimp.hs  Desugar.hs  DesugarNew.hs  Error.hs  Eval.hs  EvalBlock.hs  Expr.hs  Flags.hs  Makefile  Misc.hs  Parse.hs  ParseCore.hs  Prelude.hs  RefImpl.hs  Run.hs  TRSAdapter.hs  Tim.hs  hie.yaml  mediumprelude.verse  miniprelude.verse  verifyabsprelude.verse  verifyprelude.verse
HaskellRules/Rules/: Block.hs  Core.hs  CoreEDSL.hs  Equiv.hs  ICFP.hs  KoenNaive.hs  LeftToRight.hs  NewCore.hs  OldVerifier.hs  PLDI.hs  POPL.hs  Systems.hs  TRS2024.hs  Verifier.hs  Verifier_OK.hs
HaskellRules/TRS/: Bind.hs  NormalForm.hs  TRS.hs  TRSGraph.hs  TRSS.hs  Tarjan.hs  Traced.hs
HaskellRules/TRSVerifier/: README.md  Verifier.hs
HaskellRules/Verifier/: FOL.hs  README  Run.hs  TRSDesugar.hs  TRSVerify.hs  TRSVerify.md  Verify.hs  Verify2.hs
HaskellRules/densem/: Test  Test.hs
HaskellRules/doc/: .gitignore  Makefile  block.ltx  lfblock.ltx  rewrites.ltx  rules-eqn.ltx  rules.ltx
HaskellRules/qctest/: Main.hs
HaskellRules/tester/: Main.hs
HaskellRules/timtest/: Main.hs
HaskellRules/unr-bad/: Main.hs
HaskellRules/verifier/: FOL.hs  Main.hs
HaskellRules/verify/: Main.hs
HaskellRules/verse/: Main.hs
HaskellRules/versetests/: Tests.timverse  TimTests-pass-bad.verse  TimTests.verse  densem.versetest  storetests.versetest  test1.verse  test2.verse  tests.versetest  tricky.versetest  verify.versetest  verify1.versetest
HaskellRules2024/: A.hs  HaskellRules2024.cabal  Makefile  README  T.hs  Traced.hs  counterexample.txt  out  repor  test.script
HaskellRules2024/Confluence/: Main.hs
HaskellRules2024/Core/: Expr.hs  Rule.hs  Rules.hs  Sem.hs  Solver.hs  TRS2024.hs  Traced.hs  Verifier.hs
HaskellRules2024/Epic/: BellmanFord.hs  List.hs  OpParser.hs  Print.hs  Repl.hs  UnionFind.hs
HaskellRules2024/FrontEnd/: Desugar.hs  Error.hs  Expr.hs  Flags.hs  Parse.hs  Prelude.hs  ToCore.hs  miniprelude.verse  noprelude.verse
HaskellRules2024/Rules/: Core.hs  Eval.hs  Solver.hs  TRS2024.hs  Verifier.hs
HaskellRules2024/TRS/: Bind.hs  TRS.hs  TRSGraph.hs  Traced.hs
HaskellRules2024/refimpltester/: Main.hs
HaskellRules2024/repl/: Main.hs
HaskellRules2024/tester/: Main.hs
HaskellRules2024/versetests/: TimMini.versetest  TimTests.verse  TimTests.verse.skip  arrays.versetest  funs.verse  meetings.versetest  test1.verse  tests.versetest  tricky.versetest  verify.versetest  verify.versetest.skip  verify1.versetest
Old/epicgames/: epicgames.cabal  hie.yaml
Parser/: .ghci  .gitignore  .versei  Command.hs  Core.hs  CoreSimp.hs  DenSem.hs  Desugar.hs  Error.hs  Eval.hs  EvalTests.hs  Expr.hs  Flags.hs  Koen.hs  Main.hs  Makefile  Misc.hs  OpParser.hs  Parse.hs  Print.hs  README  README.md  REPL.hs  Run.hs  SExp.hs  TRSAdapter.hs  Testing.hs  Tests.hs  TimParse.hs  densem.versetest  hie.yaml  prelude.verse  test1.verse  test2.verse  tests.versetest  tricky.versetest  verse.cabal
Terse/: terse.cabal
Terse/c/: Main.hs
Terse/examples/: 1a.verse  1b.verse  2a.verse  List.verse  Queens.verse
Terse/exe/: Main.hs
Terse/i/: Main.hs
Terse/lib/: AnsiStyle.hs  ByteString.hs  Fix.hs  IntMap.hs  List.hs  Loc.hs  Parser.hs  Pos.hs  Pretty.hs  PromptControl.hs  Ref.hs  Text.hs  Verse.hs
VersePrototypes/: .gitignore  Makefile  VersePrototypes.cabal  cabal.project  test-script  test.script
VersePrototypes/Confluence/: Main.hs
VersePrototypes/Core/: Bind.hs  Blocked.hs  Eval.hs  Expr.hs  Rule.hs  Rules.hs  Solver.hs  Traced.hs  Verifier.hs
VersePrototypes/Epic/: List.hs  PomSet.hs  Repl.hs
VersePrototypes/FrontEnd/: CopyHook.hs  Desugar.hs  ENVDesugar.hs  Error.hs  Expr.hs  Flags.hs  Parse.hs  ParseCore.hs  ToCore.hs  mediumprelude.verse  quote.sh  usyntax.txt
VersePrototypes/Simon/: Red.hs
VersePrototypes/parser/: README.md
VersePrototypes/refimpltester/: Main.hs
VersePrototypes/repl/: Main.hs  Readme.md
VersePrototypes/test/: Test.hs
VersePrototypes/tester/: Main.hs
VersePrototypes/verse-densem/: Core.hs  Densem.hs  Dom.hs  ENV.hs  ENV2.hs  ENV3.hs  ENVDesugar.hs  ENVP.hs  ENVS.hs  EQD.hs  EQD13.hs  EQD_App.hs  EQD_Old.hs  EQD_Test.hs  Main.hs  Map.hs  MultiSet.hs  Oper.hs  Pi.hs  Pom.hs  PomPom.hs  PomSet.hs  Prefix  Prefix.hs  SExp.hs  SLS.hs  Sem.hs  SemClass.hs  SemDPSEnv.hs  SemEnv.hs  SemM.hs  SemSeqENV.hs  Set.hs  TimE.hs  TimS.hs  Unify.hs  ValueP.hs  ValueS.hs  verse-densem.tex
VersePrototypes/versetests/: arrays.versetest  densem.versetest  densemM.versetest  densemenv.versetest  densempom.versetest  meetings.versetest  testcases.versetest  tests.versetest  verify.versetest
VerseReferenceImpl/: .gitignore  Tests.skiplist  all.verse  build-wasm.sh  cabal.project  syntax.verse  verse.cabal  wasm.bash
VerseReferenceImpl/VerseCon/: CHANGELOG.md  Verse1.hs  Verse2.hs  Verse3.hs  Verse4.hs  Verse5.hs  Verse6.hs  VerseCon.cabal
VerseReferenceImpl/example/: 1.hs
VerseReferenceImpl/lex/: Main.hs
VerseReferenceImpl/main/: Main.hs
VerseReferenceImpl/parse/: Main.hs
VerseReferenceImpl/src/: .gitignore
VerseReferenceImpl/test/: 1.verse  10.verse  11.verse  12.verse  13.verse  14.verse  15.verse  16.out  16.verse  17.verse  18.verse  19.verse  2.verse  20.verse  21.verse  22.verse  23.verse  24.verse  25.verse  26.verse  27.verse  28.verse  29.verse  3.verse  30.out  30.verse  31.verse  32.verse  33.verse  34.verse  35.out  35.verse  36.verse  37.verse  38.verse  39.verse  4.out  4.verse  40.verse  41.out  (+76 more)
VerseReferenceImpl/wasm/: Main.hs  init.c
VerseReferenceImpl/www/: .gitignore  (+2 more)
(+2258 files in other folders)
