cabal-version:      3.0
name:               VerseSemantics
version:            0.1.0.0
synopsis:           Haskell prototypes and testing for Verse
description:        Programs for automated and interactive tests of Core Verse.
copyright:          Epic Games 2026
data-dir:           versetests
data-files:         *.versetest

extra-source-files: README.md

-- This common-block is macro-expanded everywhere you see 'import: general-libs'
common general-libs
    default-language: GHC2021
    ghc-options:      -Wall -Wno-unrecognised-warning-flags -Wno-x-partial -O2
    build-depends:    base,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      hashable,
                      haskeline,
                      megaparsec,
                      mtl,
                      pretty,
                      scientific,
                      text,
                      transformers,
                      unordered-containers,

library verse-libs
    import:           general-libs
    hs-source-dirs:   .
    exposed-modules:
                      Core.Bind
                      Core.Expr
                      Core.Solver
                      Core.Traced
                      Epic.BellmanFord
                      Epic.List
                      Epic.Print
                      Epic.Repl
                      Epic.UnionFind
                      FrontEnd.CopyHook
                      FrontEnd.Desugar
                      FrontEnd.Error
                      FrontEnd.Flags
                      FrontEnd.Expr
                      FrontEnd.ToCore
    build-depends:    QuickCheck,

library reduction
    import:           general-libs
    hs-source-dirs:   reduction
    exposed-modules:
                      Red
    build-depends:    verse-libs,

-- shared parser for various verse implementations and experiments
library verse-parser
    import:           general-libs
    hs-source-dirs:   parser
    default-language: GHC2021
    exposed-modules:
            Data.Fix
            Data.IntMap.Lazy.Extras
            Data.IntMap.Strict.Extras
            Control.Monad.Extras
            Control.Monad.Ref
            Control.Monad.Supply
            Control.Monad.Verse
            Control.Monad.Wrong
            Language.Verse.Access
            Language.Verse.Contract
            Language.Verse.Desugar.Exp
            Language.Verse.Effect.Split
            Language.Verse.Error
            Language.Verse.Eval
            Language.Verse.Ident
            Language.Verse.Indent
            Language.Verse.Intrinsic
            Language.Verse.Label
            Language.Verse.Loc
            Language.Verse.Mode
            Language.Verse.Exp
            Language.Verse.Path
            Language.Verse.Pos
            Language.Verse.Rewrite
            Language.Verse.Rewrite.Exp
            Language.Verse.SimpleName
            Language.Verse.Token
            Language.Verse.Val
            Parser.Verse
            Parser.Compat
    other-modules:

    build-depends: comonad
                 , hashable
                 , parsec
                 , parser-combinators
                 , prettyprinter
                 , semigroupoids
                 , verse-libs

executable repl
    import:           general-libs

    hs-source-dirs:   repl
    build-depends:    optparse-applicative,
                      reduction,
                      verse-libs,
                      verse-parser,

    main-is:          Main.hs


