cabal-version:      2.4
name:               HaskellRules
version:            0.1.0.0
synopsis:           Verse Rule testing
description:        Programs for automated and interactive tests of Core Verse rewrite systems.
copyright:          Epic Games 2022

extra-source-files: CHANGELOG.md
                    README.md

common shared-properties
    default-language: Haskell2010
    ghc-options:      -Wall -O -Werror
    build-depends:    base,
                      containers,
                      mtl,
                      pretty,


-- Various utilities.
-- Should really have its own cabal project
library all
    import:           shared-properties
    exposed-modules:  Epic.Applicative
--                      Epic.Lens
                      Epic.List
                      Epic.Print
                      Epic.OpParser
                      Epic.ShowRational
                      Epic.SIntMap
                      Epic.SIntSet
                      Epic.String
                      Epic.Uniplate
                      TRS.Bind
                      TRS.Graph
                      TRS.NormalForm
                      TRS.System
                      TRS.Tarjan
                      TRS.TRS
                      TRS.TRSGraph
                      TRS.Traced
                      Rules.Core
                      Rules.CoreEDSL
                      Rules.Equiv
                      Rules.Systems
                      FrontEnd.Core
                      FrontEnd.CoreSimp
                      FrontEnd.Error
                      FrontEnd.Eval
                      FrontEnd.EvalBlock
                      FrontEnd.Expr
                      FrontEnd.Flags
                      FrontEnd.Desugar
                      FrontEnd.Parse
                      FrontEnd.RefImpl
                      FrontEnd.Run
                      FrontEnd.TRSAdapter
                      Verifier.Verify
                      Verifier.FOL
                      Rules.ICFP
                      Rules.Verifier
                      --DenSem.DenSem
    other-modules:    Rules.PLDI
                      Rules.POPL
                      Rules.KoenNaive
                      Rules.Block

    build-depends:
                      parser-combinators,
--                      lens,
                      text,
                      uniplate,
                      QuickCheck,
                      megaparsec,
                      scientific,
                      text,
                      transformers,
                      unordered-containers,
                      z3,
    hs-source-dirs:   .

executable verse
    import:           shared-properties
    build-depends:    all,
                      haskeline,
                      optparse-applicative,

    main-is:          Main.hs

    other-modules:    VerseRepl.Command
                      VerseRepl.REPL

    hs-source-dirs:   verse
    default-language: Haskell2010

executable tester
    import:           shared-properties
    build-depends:    all,
                      megaparsec,
                      optparse-applicative,

    main-is:          Main.hs

    hs-source-dirs:   tester
    default-language: Haskell2010

executable qctest
    import:           shared-properties
    build-depends:    all,
                      optparse-applicative,
                      QuickCheck,
                      githash,

    main-is:          Main.hs

    hs-source-dirs:   qctest
    default-language: Haskell2010

executable verifier
    import:           shared-properties
    build-depends:    all,
                      optparse-applicative,
                      QuickCheck,
                      githash,
                      z3

    main-is:          Main.hs

    hs-source-dirs:   verify
    default-language: Haskell2010

executable trsverifier
    import:           shared-properties
    build-depends:    all,
                      optparse-applicative,
                      QuickCheck,
                      githash

    main-is:          TRSVerify.hs

    hs-source-dirs:   Verifier
    default-language: Haskell2010

executable timtest
    import:           shared-properties
    build-depends:    all,
                      optparse-applicative,

    main-is:          Main.hs

    hs-source-dirs:   timtest
    default-language: Haskell2010
