cabal-version:       2.2
name:                verse
version:             0.1.0.0
synopsis:            verse reference implementation
license:             MIT
author:              Lennart Augustsson
maintainer:          lennart.augustsson@epicgames.com
copyright:           Lennart Augustsson
category:            Languages
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language: Haskell2010
  hs-source-dirs:      ./, ../TRS/
  build-depends:       base,
                       parser-combinators,
                       mtl,
                       pretty,
                       haskeline,
                       containers,
                       megaparsec,
                       scientific,
                       QuickCheck
  other-modules:       Bind
                       Command
                       Core
                       CoreSimp
                       Desugar
                       Error
                       Eval
                       Expr
                       Misc
                       Parse
                       Print
                       REPL
                       Rules
                       SExp
                       Show
                       TRS
                       TRSAdapter
                       TRSCore
                       RulesPOPL
                       Run
                       DenSem
                       Flags
                       OpParser
executable verse
  import: shared-properties
  main-is:             ../Parser/Main.hs
  other-modules:       Testing

test-suite tests
  import:     shared-properties
  type:             exitcode-stdio-1.0
  main-is:          ../Parser/Testing.hs
  ghc-options: -main-is Testing
