cabal-version:       2.2
name:                verse
version:             0.1.0.0
synopsis:            verse reference implementation
license:             MIT
author:              Lennart Augustsson
maintainer:          lennart.augustsson@epicgames.com
copyright:           Lennart Augustsson
category:            Languages
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language: Haskell2010
  build-depends:       base,
                       parser-combinators,
                       mtl,
                       pretty,
                       haskeline,
                       containers,
                       megaparsec,
                       scientific,
                       QuickCheck

common parser-properties
  import: shared-properties
  build-depends:  trs
  other-modules:  Command
                  Core
                  CoreSimp
                  DenSem
                  Desugar
                  Error
                  Eval
                  Expr
                  Flags
                  Misc
                  OpParser
                  Parse
                  Print
                  REPL
                  Run
                  SExp
                  TRSAdapter

library trs
  import: shared-properties
  hs-source-dirs: ../TRS
  exposed-modules: Bind
                   TRS
                   TRSCore
                   Show
                   RulesPOPL

executable verse
  import: parser-properties
  main-is:        Main.hs
  other-modules:  Testing

test-suite tests
  import: parser-properties
  type: exitcode-stdio-1.0
  main-is: Testing.hs
  ghc-options: -main-is Testing
