cabal-version:       2.2
name:                verse
version:             0.1.0.0
synopsis:            Verse reference implementation
license:             MIT
author:              Lennart Augustsson
maintainer:          lennart.augustsson@epicgames.com
copyright:           Lennart Augustsson
category:            Languages
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language: Haskell2010
  build-depends:       base,
                       parser-combinators,
                       mtl,
                       pretty,
                       haskeline,
                       containers,
                       megaparsec,
                       optparse-applicative,
                       scientific,
                       QuickCheck

common parser-properties
  import: shared-properties
  hs-source-dirs: ..
  build-depends:  trs
  other-modules:  Parser.Command
                  Parser.Core
                  Parser.CoreSimp
                  Parser.DenSem
                  Parser.Desugar
                  Parser.Error
                  Parser.Eval
                  Parser.Expr
                  Parser.Flags
                  Parser.Misc
                  Parser.OpParser
                  Parser.Parse
                  Parser.Print
                  Parser.REPL
                  Parser.Run
                  Parser.SExp
                  Parser.TRSAdapter

library trs
  import: shared-properties
  hs-source-dirs: ..
  exposed-modules: TRS.Bind
                   TRS.TRS
                   TRS.TRSCore
                   TRS.Show
                   TRS.RulesPOPL
                   TRS.RulesPLDI

executable verse
  hs-source-dirs: .
  import: parser-properties
  main-is:        Main.hs
  other-modules:  Parser.Testing

test-suite tests
  hs-source-dirs: ..
  import: parser-properties
  type: exitcode-stdio-1.0
  main-is: Testing.hs
  ghc-options: -main-is Parser.Testing
