cabal-version:      3.4
name:               terse
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Andy Sonnenburg
maintainer:         andy.sonnenburg@epicgames.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   lib
  exposed-modules:
    AnsiStyle
    Fix
    IntMap
    List
    Loc
    Parser
    Parser.PWD
    Pos
    Pretty
    Ref
    Text
    Verse
    Verse.Core.Eval
    Verse.Core.Exp
    Verse.Core.Parse
    Verse.Core.Val
    Verse.CPS.Convert
    Verse.CPS.Eval
    Verse.CPS.Exp
    Verse.CPS.Val
    Verse.Fun
    Verse.Monad
    Verse.Name
    Verse.Token
  build-depends:
    base,
    containers,
    mtl,
    prettyprinter,
    prettyprinter-ansi-terminal,
    text,
    transformers,
    unordered-containers
  default-language: GHC2021

executable terse
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base,
    ansi-terminal,
    directory,
    filepath,
    haskeline,
    prettyprinter,
    prettyprinter-ansi-terminal,
    terse,
    text,
    transformers
  hs-source-dirs:   exe
  default-language: GHC2021
