cabal-version:      3.4
name:               terse
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Andy Sonnenburg
maintainer:         andy.sonnenburg@epicgames.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   lib
  exposed-modules:
    AnsiStyle
    Fix
    List
    Loc
    Parser
    Parser.PWD
    Pos
    Pretty
    Ref
    Text
    Verse
    Verse.Comp
    Verse.Comp.Internal
    Verse.Eval
    Verse.Eval.Fun
    Verse.Eval.Val
    Verse.Exp
    Verse.Parse
    Verse.Monad
    Verse.Name
    Verse.Run
    Verse.Run.S
    Verse.Run.Val
    Verse.TH
    Verse.Token
  build-depends:
    base,
    containers,
    mtl,
    prettyprinter,
    prettyprinter-ansi-terminal,
    template-haskell,
    text,
    transformers,
    unordered-containers
  default-language: GHC2021

executable tersec
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base,
    filepath,
    prettyprinter,
    template-haskell,
    terse,
    text
  hs-source-dirs:   c
  default-language: GHC2021

executable tersei
  import:           warnings
  main-is:          Main.hs
  build-depends:
    base,
    ansi-terminal,
    directory,
    filepath,
    haskeline,
    prettyprinter,
    prettyprinter-ansi-terminal,
    terse,
    text,
    transformers
  hs-source-dirs:   i
  default-language: GHC2021
