cabal-version:      3.0
name:               VersePrototypes
version:            0.1.0.0
synopsis:           Haskell prototypes and testing for Verse
description:        Programs for automated and interactive tests of Core Verse rewrite systems.
tested-with:        GHC==9.4
copyright:          Epic Games 2022
data-dir:           versetests
data-files:         *.versetest

extra-source-files: CHANGELOG.md
                    README.md

-- This common-block is macro-expanded everywhere you see 'import: general-libs'
common general-libs
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unrecognised-warning-flags -Wno-x-partial -O -ticky
    build-depends:    base,
                      directory,
                      containers,
                      random,
                      mtl >= 2.3,
                      pretty,
                      megaparsec,
                      haskeline,
                      scientific

executable verse-repl
    import:           general-libs

    -- In the repl/ subdirectory
    hs-source-dirs:   repl
    build-depends:    verse-libs,
                      verse-densem,
                      haskeline,
                      optparse-applicative,

    main-is:          Main.hs

executable confluence-check
    -- In the Confluence/ subdirectory
    import:           general-libs
    hs-source-dirs:   Confluence
                      .
    build-depends:    text,
                      QuickCheck,
                      verse-libs

    main-is:          Main.hs

    -- In an executable, exposed-modules doesn't matter
    other-modules:
                      Core.Expr
                      Core.Solver
                      Core.Rules
                      Core.Rule
                      Core.Blocked
                      Core.Bind
                      Core.Traced
                      Epic.Print
                      Epic.List
                      Epic.UnionFind
                      Epic.BellmanFord
                      FrontEnd.Error



-- executable trsverifier
--    import:           general-libs
--    hs-source-dirs:   Verifier
--    build-depends:    verse-libs,
--                      optparse-applicative,
--                      QuickCheck,
--                      githash
--
--    main-is:          TRSVerify.hs
--
--    default-language: Haskell2010

executable tester
     import:           general-libs
     hs-source-dirs:   tester
     build-depends:    verse-libs,
                       megaparsec,
                       optparse-applicative,
                       uniplate,

     main-is:          Main.hs

     default-language: Haskell2010

executable refimpltester
     import:           general-libs
     hs-source-dirs:   refimpltester
     build-depends:    verse-libs,
                       megaparsec,
                       optparse-applicative,
                       HUnit,
                       prettyprinter,
                       comonad,
                       semigroupoids,
                       text,
                       unordered-containers,
                       bytestring,
                       transformers,
                       hashable,
                       parsec,
                       filepath,
     hs-source-dirs:   ../VerseReferenceImpl/src

     main-is:          Main.hs

     default-language: GHC2021
     ghc-options:      -Wall -Wno-name-shadowing

     other-modules:
        Control.Monad.Extras
        Control.Monad.Ref
        Control.Monad.Supply
        Control.Monad.Verse
        Control.Monad.Wrong
        Data.Fix
        Data.IntMap.Lazy.Extras
        Data.IntMap.Strict.Extras
        Language.Verse
        Language.Verse.Access
        Language.Verse.Contract
        Language.Verse.Desugar
        Language.Verse.Desugar.Exp
        Language.Verse.Effect.Split
        Language.Verse.Error
        Language.Verse.Eval
        Language.Verse.Ident
        Language.Verse.Indent
        Language.Verse.Intrinsic
        Language.Verse.Label
        Language.Verse.Loc
        Language.Verse.Mode
        Language.Verse.Parse.Exp
        Language.Verse.Parse2
        Language.Verse.Path
        Language.Verse.Pos
        Language.Verse.Rewrite
        Language.Verse.Rewrite.Exp
        Language.Verse.SimpleName
        Language.Verse.Token
        Language.Verse.Val



-- executable qctest
--     import:           general-libs
--     build-depends:    verse-libs,
--                       optparse-applicative,
--                       QuickCheck,
--                       githash,
--
--     main-is:          Main.hs
--
--     hs-source-dirs:   qctest
--     default-language: Haskell2010
--     ghc-options:      -Wall -Wno-unrecognised-warning-flags -Wno-x-partial -O2 -threaded -feager-blackholing -rtsopts

--executable verifier
--    import:           general-libs
--    build-depends:    verse-libs,
--                      optparse-applicative,
--                      QuickCheck,
--                      githash,
--                      z3
--
--    main-is:          Main.hs
--
--    hs-source-dirs:   verify
--    default-language: Haskell2010


library verse-densem
    import:           general-libs
    hs-source-dirs:   verse-densem
    default-extensions:  TypeOperators
    exposed-modules:
                      SExp
                      Dom
                      ENV
                      Oper
                      SemSeqENV
    build-depends:    verse-libs,
                      base,
                      containers,
                      text,
                      pretty,
                      QuickCheck,
                      scientific

-- Various Verse utilities on which other stuff depends
-- Should really have its own cabal project
library verse-libs
    import:           general-libs
    hs-source-dirs:   .
    exposed-modules:
                      Epic.Print
                      Epic.Repl
                      Epic.OpParser
                      Epic.List
                      Epic.UnionFind
                      Epic.BellmanFord
                      FrontEnd.CopyHook
                      FrontEnd.Error
                      FrontEnd.Expr
                      FrontEnd.Flags
                      FrontEnd.Parse
                      FrontEnd.Prelude
                      FrontEnd.Desugar
                      FrontEnd.ToCore
                      Core.Bind
                      Core.Expr
                      Core.Solver
                      Core.Rules
                      Core.Rule
                      Core.Blocked
                      Core.Traced
                      Core.Verifier

--                      Epic.Applicative
--                      Epic.Lens
--                      Epic.List
--                      Epic.ShowRational
--                      Epic.SIntMap
--                      Epic.SIntSet
--                      Epic.String
--                      Epic.Trace
--                      Epic.Uniplate
--                      Epic.QuickCheck
--                      TRS.Bind
--                      TRS.Graph
--                      TRS.NormalForm
--                      TRS.System
--                      TRS.Tarjan
--                      TRS.TRS
--                      TRS.TRSGraph
--                      TRS.Traced
--                      Rules.Core
--                      Rules.CoreEDSL
--                      Rules.Equiv
--                      Rules.Systems
--                      FrontEnd.EvalBlock
--                      FrontEnd.ParseCore
--                      FrontEnd.RefImpl
--                      FrontEnd.Run
--                      FrontEnd.TRSAdapter
--                      Verifier.TRSDesugar
----                      Verifier.FOL
--                      Rules.ICFP
--                      Rules.OldVerifier
--                      Rules.Verifier
--                      DenSem.DenSem
    other-modules:
--                      Rules.PLDI
--                      Rules.POPL
--                      Rules.TRS2024
--                      Rules.KoenNaive
--                      Rules.LeftToRight
--                      Rules.Block

    build-depends:
                      parser-combinators,
                      text,
                      uniplate,
                      QuickCheck,
                      megaparsec,
                      scientific,
                      transformers,
                      unordered-containers,


-- shared parser for various verse implementations and experiments
library verse-parser
    import:           general-libs
    hs-source-dirs:   parser
    exposed-modules:
                      Parser.Expr
                      Parser.Error
                      Parser.Parser
                      Parser.OpParser
    other-modules:

    build-depends: parser-combinators
                 , verse-libs

test-suite verse-parser-test
    import:           general-libs
    hs-source-dirs:   parser/test
    type: exitcode-stdio-1.0

    -- exposed-modules:
    main-is:          Main.hs

    default-language: GHC2021
    ghc-options:      -Wall -Wno-name-shadowing

    other-modules: Paths_VersePrototypes
    build-depends: base
                 , megaparsec
                 , containers
                 , text
                 , filepath
                 , directory
                 , verse-parser
